k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-ingress
  namespace: ldap-proxy
spec:
  rules:
    - host: ldap-proxy-admin.example.com
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
